--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,125 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.contenedor {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    margin-top: 20px;
+}
+
+.title {
+    color: rgb(54, 54, 54);
+    font-size: 5rem;
+    font-weight: 400;
+}
+
+ol, li, input {
+    width: 100%;
+}
+
+li {
+    list-style-type: none;
+    border-bottom: 1px solid rgb(196, 196, 196);
+}
+
+span {
+    float: right;
+    color: red;
+    opacity: 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+li:hover span {
+    opacity: 1;
+    cursor:pointer;
+}
+
+ol {
+    margin: 0 0 0 0;
+    padding: 0;
+}
+
+p {
+    margin: 0;
+}
+
+input, li {
+    padding: 15px;
+}
+
+input {
+    border: none;
+    border-bottom: 1px solid rgb(196, 196, 196);
+    background-color: rgb(250, 250, 250);
+}
+
+.list {
+    background: rgb(250, 250, 250);
+    width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    color: rgb(59, 59, 59);
+}
+
+.itemsLeft {
+    padding: 5px;
+    margin-left: 10px;
+    font-size: 13px;
+    color: black;
+}
+
+.fondo1 {
+    width: 97%;
+    margin: auto;
+    height: 3px;
+    background: rgb(250, 250, 250);
+}
+
+.fondo2 {
+    width: 94%;
+    margin: auto;
+    height: 3px;
+    background: rgb(250, 250, 250);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.fondo3 {
+    width: 91%;
+    margin: auto;
+    height: 3px;
+    background: rgb(250, 250, 250);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.noTasks {
+    text-align: center;
+    font-size: 15px;
+    color: rgb(126, 126, 126);
+}
+
+.noTasksContainer {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    background: rgb(250, 250, 250);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.noTasksContainer p {
+    margin: 0;
+}
+
+.icono {
+    color: red;
+    background: gainsboro;
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 20px;
+}
